[package]
name = "proset"
version = "0.1.0"
authors = ["Kai Lieth <dubokk15@gmail.com>"]

[dependencies]
fern = "*"
hyper = "*"
iron = "*"
log = "*"
rand = "*"
router = "*"
rustc-serialize = "*"
time = "*"

[dependencies.persistent]
git = "https://github.com/klieth/persistent" 
rev = "76459b1fd5eea596a56f678c9253898e5e68c45e"
